put links in divs with fixed width to avoid shifting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,20 +48,45 @@ h1 {
     padding: 25px 10px 25px 10px;
 }
 
-nav {
+#links {
     float: right;
-    margin: 40px 200px 40px 0px;
     color: #777777;
     font-family: Arial, 'Helvetica neue', Helvetica, sans-serif;
+    letter-spacing: 0.5px;
+    margin-right: 200px;
+    height: 100%;
+    padding: 0px 15px 0px 15px;
 }
 
-#links, li {
+#index {
+    float: left;
+    padding: 0px 10px 0px 10px;
+    border-right: solid 2px #777777;
+    margin: 35px 0px 35px 0px;
     list-style-type: none;
-    display: inline;
+    width: 45px;
+}
+
+#portfolio {
+    float: left;
+    padding: 0px 10px 0px 10px;
+    border-right: solid 2px #777777;
+    margin: 35px 0px 35px 0px;
+    list-style-type: none;
+    width: 64px;
+}
+
+#contact {
+    float: left;
+    padding: 0px 10px 0px 10px;
+    margin: 35px 0px 35px 0px;
+    list-style-type: none;
+    width: 59px;
 }
 
 a:hover {
     font-weight: bold;
+    letter-spacing: 0px;
 }
 
 
@@ -94,7 +119,7 @@ p {
 
 #stacypic {
     float: left;
-    height: 200px;
+    height: 190px;
     width: 150px;
     padding: 20px;
 }
